Add: Implement file-sharing/project/get-file{,-info}
